test/org/midica/testfiles/failing/eff-flow-broken-by-var.midica
INCLUDE inc/instruments.midica


0: vol.double.set(50)
VAR $x = y
0: .wait.set(50)

